CSS overlap issue

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,7 +3,7 @@
     position: fixed;
     left: 0;
     top: 0;
-    z-index: 1000;
+    z-index: 19;
 }
 
 .Header .bp3-navbar {
